<resources>
    <string name="app_name">PastiProduktif</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title">title</string>
    <string name="activity_description">activity description</string>
    <string name="date">date</string>
    <string name="add_word">add_assessment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_activity_assessment">New Activity Assessment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="not_saved">failed to add</string>

    <string name="key_switch">key_switch</string>
    <string name="switch_title">Scheduled Notification</string>
    <string name="activity">activity</string>
    <string name="update">update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="time_hint">ex: 09:00-10.30</string>

    <string-array name="rating">
        <item>@drawable/rating_1</item>
        <item>@drawable/rating_2</item>
        <item>@drawable/rating_3</item>
        <item>@drawable/rating_4</item>
        <item>@drawable/rating_5</item>
    </string-array>
</resources>